web-api-auth-examples/laborator/Adminer/adminer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pgadmin-pod
spec:
  containers:
    - name: pgadmin-container
      image: dpage/pgadmin4
      imagePullPolicy: "IfNotPresent"
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
spec:
  type: NodePort
  ports:
    - nodePort: 30000
      targetPort: 80
      port: 80
  selector:
    app: pgadmin-pod
